--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
-    "magic-sdk": "^9.0.0"
+    "@pinata/sdk": "^1.1.26",
+    "magic-sdk": "^9.0.0",
+    "path": "^0.12.7"
   }
 }
